--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "framer-motion": "^12.4.2",
     "lucide-react": "^0.468.0",
     "next": "latest",
-    "next-themes": "^0.4.3",
+    "next-themes": "^0.4.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "resend": "^4.1.2"
+    "resend": "^4.1.2",
+    "sonner": "^1.7.4"
   },
   "devDependencies": {
     "@types/node": "22.10.2",
