--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-dom": "19.0.0",
     "resend": "^4.1.2",
     "rfc6902": "^5.1.2",
-    "sonner": "^1.7.4"
+    "sonner": "^1.7.4",
+    "supabase": "^2.15.8"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
