--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "framer-motion": "^12.4.2",
     "lucide-react": "^0.468.0",
     "motion": "^12.4.7",
-    "next": "latest",
+    "next": "^15.2.3",
     "next-themes": "^0.4.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
