--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-avatar": "^1.1.3",
