--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@heroicons/react": "^2.2.0",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -48,7 +49,7 @@
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
     "@types/node": "22.10.2",
-    "@types/react": "^19.0.2",
+    "@types/react": "^19.0.12",
     "@types/react-dom": "19.0.2",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
