--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next-themes": "^0.4.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "recharts": "^2.15.1",
     "resend": "^4.1.2",
     "rfc6902": "^5.1.2",
     "sonner": "^1.7.4",
@@ -51,6 +52,7 @@
     "@types/node": "22.10.2",
     "@types/react": "^19.0.12",
     "@types/react-dom": "19.0.2",
+    "@types/recharts": "^1.8.29",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
     "postcss": "8.4.49",
