--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "motion": "^12.4.7",
     "next": "^15.2.3",
     "next-themes": "^0.4.4",
+    "noise-gradient-bg": "1.0.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "resend": "^4.1.2",
