--- a/app/manifest.json
+++ b/app/manifest.json
@@ -22,5 +22,20 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#000",
-  "theme_color": "#a855f7"
+  "theme_color": "#a855f7",
+  "orientation": "any",
+  "categories": ["productivity", "utilities"],
+  "lang": "en",
+  "dir": "ltr",
+  "scope": "/",
+  "prefer_related_applications": false,
+  "display_override": ["standalone", "browser"],
+  "screenshots": [
+    {
+      "src": "/og-image.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "platform": "wide"
+    }
+  ]
 }
