--- a/app/manifest.json
+++ b/app/manifest.json
@@ -24,7 +24,7 @@
   "background_color": "#000",
   "theme_color": "#a855f7",
   "orientation": "any",
-  "categories": ["productivity", "utilities"],
+  "categories": ["business", "productivity", "devtool","saas"],
   "lang": "en",
   "dir": "ltr",
   "scope": "/",
