--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@types/uuid": "^10.0.0",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.4",
     "@vercel/analytics": "^1.5.0",
@@ -46,7 +47,8 @@
     "resend": "^4.1.2",
     "rfc6902": "^5.1.2",
     "sonner": "^1.7.4",
-    "supabase": "^2.15.8"
+    "supabase": "^2.15.8",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
