--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-progress": "^1.1.6",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
@@ -44,7 +45,7 @@
     "noise-gradient-bg": "^1.0.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "recharts": "^2.15.1",
+    "recharts": "^2.15.3",
     "resend": "^4.1.2",
     "rfc6902": "^5.1.2",
     "sonner": "^1.7.4",
