--- a/app/manifest.json
+++ b/app/manifest.json
@@ -22,7 +22,7 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#000",
-  "theme_color": "#a855f7",
+  "theme_color": "#000",
   "orientation": "any",
   "categories": ["business", "productivity", "devtool", "saas"],
   "lang": "en",
