--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "next-themes": "^0.4.4",
     "noise-gradient-bg": "^1.0.4",
     "react": "19.0.0",
+    "react-ai-orb": "^1.0.13",
     "react-dom": "19.0.0",
     "recharts": "^2.15.3",
     "resend": "^4.5.1",
