--- a/.github/workflows/hookflo-test.yml
+++ b/.github/workflows/hookflo-test.yml
@@ -10,7 +10,7 @@ on:
         description: 'Header value to be sent as x-webhook-id.'
         required: true
       webhook_secret:
-        description: 'Header value to be sent as x-webhook-secret.'
+        description: 'Header value to be sent as x-webhook-token.'
         required: true
       payload:
         description: 'Optional JSON payload to send'
@@ -28,7 +28,7 @@ jobs:
 
       - name: Notify HookFlo on Failure
         if: failure()
-        uses: Hookflo/hookflo-notify-action@v1.3
+        uses: Hookflo/hookflo-notify-action@v1.5
         with:
           webhook_url: ${{ github.event.inputs.webhook_url }}
           webhook_id: ${{ github.event.inputs.webhook_id }}
