--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@clerk/clerk-js": "^5.74.1",
     "@clerk/nextjs": "^6.25.4",
+    "@clerk/themes": "^2.3.3",
     "@hello-pangea/dnd": "^18.0.1",
     "@heroicons/react": "^2.2.0",
     "@monaco-editor/react": "^4.7.0",
